# agent-operating-framework

./: .aof_policy.example.json  .aof_policy.json  .gitignore  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml  setup.sh  test_mcp_smoke.py
.github/ISSUE_TEMPLATE/: effectiveness_note.md
.github/workflows/: aof.yml  effectiveness-reminder.yml
adapters/: .env.example  __init__.py  workspace_config.example.json
core/: __init__.py  __main__.py  check_contract.py  cli.py  doctor.py  errors_ledger.py  estate.py  execution_contract.md  heartbeat.py  host_context.py  improve.py  lease.py  mcp_server.py  operating_protocol.md  oplog.py  preflight.py
docs/: ALIGNMENT_WITH_HISTORY_20260720.md  AOF_ONE_PAGER.html  ARCHITECTURE.md  ASSESSMENT_20260721.md  BYPASS_AND_KARPATHY.md  CLEAN_MACHINE_AUDIT_20260721.md  DOCUMENT_GOVERNANCE.md  DOGFOOD_14DAY_CHECKLIST.md  DOGFOOD_7DAY_VI.md  EFFECTIVENESS_SMOKE_20260721.md  ENGINEERING_WORKFLOW.md  ESTATE_EFFECTIVENESS.md  HISTORY_GOVERNANCE.md  INDEX.md  MASTER_PLAN.md  OPERATOR_WORKFLOW_VI.md  PLAN_REVIEW_STANDARD.md  PRODUCT_DIRECTION_V03.md  QUICKSTART_VI.md  REWIRE_MAP_AOF_SKILL.md  VONG_LAP_NO_CODE_VI.md  WORKER_CONTROL_VI.md
docs/history/: INDEX.md
examples/: .env.example  OPERATING_PROTOCOL.md  config.json  contract_template.md  demo.py  full_flow_demo.py  mcp.json  quickstart.md
scripts/: ci_tools_list_smoke.py  effectiveness_ab_smoke.py  estate_weekly.sh  post_effectiveness_to_github.sh
src/: npflight.py  npflight_mcp.py
tests/: conftest.py  test_adversarial.py  test_doctor.py  test_e2e_user_journey.py  test_enforcement.py  test_errors_improve.py  test_estate.py  test_handoff_index_resume.py  test_host_context_estate.py  test_karpathy.py  test_lanes.py  test_lease.py  test_mcp_server.py  test_multirepo_handoff.py  test_no_shadow_import.py  test_npflight_mcp.py  test_oplog_heartbeat.py  test_policy_compat.py  test_preflight.py  test_recap_handoff.py
(+16 files in other folders)
