[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-operating-framework"
version = "0.3.0b1"
description = "Portable preflight gate and execution contract enforcement for AI-agent workspaces."
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
keywords = ["ai", "agents", "preflight", "mcp", "execution-contract"]
# ponytail: zero mandatory deps -- certifi is a lazy-optional fallback in mcp_server and asana_adapter
dependencies = []

[project.scripts]
aof = "core.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/nguyenngocduyphuc/agent-operating-framework"
Repository = "https://github.com/nguyenngocduyphuc/agent-operating-framework"
Issues = "https://github.com/nguyenngocduyphuc/agent-operating-framework/issues"
Changelog = "https://github.com/nguyenngocduyphuc/agent-operating-framework/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["core", "adapters"]

[tool.setuptools.package-data]
"core" = ["*.md"]
"adapters" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
